--- a/SpendingMultiplier(E)/Layouts/mx_1_main(e).xml
+++ b/SpendingMultiplier(E)/Layouts/mx_1_main(e).xml
@@ -83,8 +83,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>2035</x>
-                        <y>-57</y>
+                        <x>2217</x>
+                        <y>-55</y>
                         <z>0</z>
                         <width>133</width>
                         <height>50</height>
@@ -172,7 +172,7 @@
                         <collisions>Enabled</collisions>
                     </properties>
                     <instance-variables>
-                        <moneys>15</moneys>
+                        <moneys>12</moneys>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -206,7 +206,7 @@
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>163</x>
-                        <y>950</y>
+                        <y>1262</y>
                         <z>0</z>
                         <width>320</width>
                         <height>500</height>
@@ -361,7 +361,7 @@
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>175</x>
-                        <y>834</y>
+                        <y>1146</y>
                         <z>0</z>
                         <width>174</width>
                         <height>62</height>
@@ -498,8 +498,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1820</x>
-                        <y>990</y>
+                        <x>2066</x>
+                        <y>936</y>
                         <z>0</z>
                         <width>228</width>
                         <height>95</height>
@@ -529,7 +529,7 @@
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>208</x>
-                        <y>928</y>
+                        <y>1240</y>
                         <z>0</z>
                         <width>174</width>
                         <height>62</height>
@@ -559,7 +559,7 @@
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>210</x>
-                        <y>1025</y>
+                        <y>1337</y>
                         <z>0</z>
                         <width>174</width>
                         <height>62</height>
@@ -589,7 +589,7 @@
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>123</x>
-                        <y>1121</y>
+                        <y>1433</y>
                         <z>0</z>
                         <width>174</width>
                         <height>62</height>
@@ -720,7 +720,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>712</x>
+                        <x>1114</x>
                         <y>1112</y>
                         <z>0</z>
                         <width>175</width>
@@ -742,8 +742,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>872</x>
-                        <y>1112</y>
+                        <x>783</x>
+                        <y>1080</y>
                         <z>0</z>
                         <width>175</width>
                         <height>175</height>
@@ -764,32 +764,10 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1086</x>
-                        <y>1112</y>
+                        <x>1239</x>
+                        <y>1096</y>
                         <z>0</z>
                         <width>175</width>
-                        <height>175</height>
-                        <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.5</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
-                <instance type="mx_1_PStock" uid="32">
-                    <properties>
-                        <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>0</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>1360</x>
-                        <y>1111</y>
-                        <z>0</z>
-                        <width>350</width>
                         <height>175</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
@@ -808,8 +786,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>285</x>
-                        <y>522</y>
+                        <x>236</x>
+                        <y>593</y>
                         <z>0</z>
                         <width>300</width>
                         <height>300</height>
@@ -834,8 +812,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>190</x>
-                        <y>493</y>
+                        <x>141</x>
+                        <y>564</y>
                         <z>0</z>
                         <width>90</width>
                         <height>180</height>
@@ -860,8 +838,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>285</x>
-                        <y>493</y>
+                        <x>236</x>
+                        <y>564</y>
                         <z>0</z>
                         <width>90</width>
                         <height>180</height>
@@ -886,8 +864,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>380</x>
-                        <y>493</y>
+                        <x>331</x>
+                        <y>564</y>
                         <z>0</z>
                         <width>90</width>
                         <height>180</height>
@@ -913,8 +891,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>169</x>
-                        <y>352</y>
+                        <x>120</x>
+                        <y>423</y>
                         <z>0</z>
                         <width>234</width>
                         <height>82</height>
@@ -925,7 +903,91 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="mx_1_MySjop" uid="40">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>960</x>
+                        <y>1060</y>
+                        <z>0</z>
+                        <width>1200</width>
+                        <height>280</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>0.5</opacity>
+                    </world>
+                </instance>
+                <instance type="mx_1_SWShop" uid="39">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>960</x>
+                        <y>1060</y>
+                        <z>0</z>
+                        <width>1200</width>
+                        <height>280</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="mx_1_PStock" uid="32">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1501</x>
+                        <y>1107</y>
+                        <z>0</z>
+                        <width>350</width>
+                        <height>175</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
+            <effects />
+        </layer>
+        <layer name="Layer 1" sid="378394473072441">
+            <initially-visible>1</initially-visible>
+            <background-color>255,255,255</background-color>
+            <transparent>1</transparent>
+            <parallax>
+                <x>1</x>
+                <y>1</y>
+            </parallax>
+            <zoom-rate>1</zoom-rate>
+            <opacity>1</opacity>
+            <force-own-texture>0</force-own-texture>
+            <global>0</global>
+            <use-render-cells>0</use-render-cells>
+            <blend-mode>0</blend-mode>
+            <effect-fallback>0</effect-fallback>
+            <instances />
             <effects />
         </layer>
     </layers>
