--- a/SpendingMultiplier(E)/Layouts/mx_1_tutorial.xml
+++ b/SpendingMultiplier(E)/Layouts/mx_1_tutorial.xml
@@ -130,13 +130,13 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1820</x>
-                        <y>1050</y>
+                        <x>1754</x>
+                        <y>1125</y>
                         <z>0</z>
-                        <width>200</width>
-                        <height>300</height>
+                        <width>246</width>
+                        <height>150</height>
                         <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
+                        <hotspotX>0.333333343</hotspotX>
                         <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
@@ -557,7 +557,7 @@
                 </instance>
                 <instance type="mx_1_myMoneyss" uid="82">
                     <properties>
-                        <text>$:12</text>
+                        <text>12</text>
                         <initial-visibility>Visible</initial-visibility>
                         <font>Arial,-64,400,0</font>
                         <color>0,0,0</color>
@@ -570,8 +570,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1820</x>
-                        <y>1130</y>
+                        <x>2072</x>
+                        <y>1149</y>
                         <z>0</z>
                         <width>202.196060181</width>
                         <height>127.702774048</height>
@@ -778,8 +778,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1820</x>
-                        <y>901</y>
+                        <x>1821</x>
+                        <y>1050</y>
                         <z>0</z>
                         <width>80</width>
                         <height>150</height>
@@ -932,7 +932,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1501</x>
+                        <x>1474</x>
                         <y>1107</y>
                         <z>0</z>
                         <width>350</width>
@@ -1220,6 +1220,36 @@
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="mx_1_myMuney" uid="96">
+                    <properties>
+                        <character-width>16</character-width>
+                        <character-height>16</character-height>
+                        <character-set>ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.,;:?!-_~#&quot;&apos;&amp;()[]|`\/@°+=*$£€&lt;&gt;</character-set>
+                        <text>12</text>
+                        <scale>4.5</scale>
+                        <initial-visibility>Visible</initial-visibility>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Character</wrapping>
+                        <character-spacing>-20</character-spacing>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1738</x>
+                        <y>1089</y>
+                        <z>0</z>
+                        <width>225</width>
+                        <height>161</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
